# expense_log

./: README.md  architecture.md
database/: docker_expense_log_db.sh  expense_log_db.sql
expense_log_back/: Cargo.toml  app.properties  client.http
expense_log_back/rest_client/: app_user.http  expense_type.http
expense_log_back/src/: main.rs
expense_log_back/src/auth/: jwt.rs
expense_log_back/src/error/: error.rs
expense_log_back/src/model/: app_user.rs  expense.rs  expense_alert.rs  expense_type.rs  mod.rs
expense_log_back/src/repository/: app_user_repo.rs  expense_type_repo.rs  mod.rs
expense_log_back/src/routes/: routes.rs
expense_log_back/src/service/: app_user_service.rs  expense_type_service.rs  mod.rs
expense_log_ui/: Cargo.toml
